--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,6 @@
     "migrate": "ts-node src/database/migrate.ts"
   },
   "dependencies": {
-    "@types/mongoose": "^5.11.96",
-    "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -24,21 +22,23 @@
     "mongoose": "^9.1.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
-    "sqlite3": "^5.1.6"
-  },
-  "devDependencies": {
+    "sqlite3": "^5.1.6",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.10.0",
+    "typescript": "^5.3.0"
+  },
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.0"
+    "ts-node-dev": "^2.0.0"
   },
   "keywords": [
     "beauty",
